--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,39 +77,39 @@
           "title": "What is CKB?",
           "p1": "To understand CKB, we must leave behind all the complex concepts and capture the very essence: it's all about cells and the transformation of cells.",
           "p2": "Cell is the basic unit of CKB, similar to a cell in the human body. Each cell constitutes the general state of the entire CKB blockchain. When we initiate a transaction on the blockchain, thus making a state change, in the end, for CKB, it is nothing more than spending some cells while creating some new ones, no matter how complicated the transaction and the state change are. This process is the same as the Bitcoin UTXO.",
-          "p3": "Cells spent are dead cells; cells unspent are live cells. So, a chain keeps on spending and creating cells through transactions, like the renewal and division of cells throughout the body.",
-          "p4": "Unlike UTXO, a cell can store any type of data. A cell has a field called data inside, which you can put an unformatted string. In other words, you can write whatever you want in whatever format inside  data, so long as you can interpret the string.",
-          "p5": "For example, I can save a hash, a text, a date, or even a piece of binary code that can be referenced by other cells and run on-chain through the CKB virtual machine, CKB-VM.",
-          "p6": "This is the so-called smart contract on CKB, as simple as that."
+          "p3": "Unspent cells are live cells; spent cells are dead cells. So, a CKB chain keeps on spending and creating cells through transactions, like the renewal and division of cells throughout the body.",
+          "p4": "Unlike UTXO, a cell can store any type of data. Each cell has a field called data, where you can put an unformatted string. The string can be in whatever format you want, as long as you can interpret it.",
+          "p5": "For example, the string can be a hash, a text, a date, or even a piece of binary code that can be referenced by other cells and run on-chain through the CKB virtual machine, CKB-VM.",
+          "p6": "As simple as that, this is the so-called smart contract on CKB."
         },
         "howToOwnACell": {
           "title": "How to own a cell?",
-          "p1": "Cells are obtained by consensus on the chain, thus the storage space becomes precious, and owning a cell inevitably incurs costs.",
+          "p1": "Cells are obtained by the verification of the global consensus on the chain. Owning cells entails costs, since their storage space is limited.",
           "p2": "This leads us to the function of CKB's native tokens.",
           "p3": "Imagine a cell as a small box that can carry objects. The box itself is created by tokens. A box's size varies by how many tokens you have.",
-          "p4": "A box can also be subdivided into multiple boxes. Simply make sure that the boxes’ total space is equal to the quantity of tokens you hold.",
-          "p6": "Based on the system settings, 1 CKB is equal to 1 byte of space.",
-          "p7": "If you have 100 CKBs, for example, you will have 100 bytes of on-chain space, then you can create a box with 100 bytes space. You can divide the 100 bytes into as many boxes as you like. It's up to you.",
-          "p8": "Once the box (cell) has space, it can contain data. Data size must be smaller than the box, because the box has other components which also occupy some space.",
-          "p9": "For instance, one Chinese character accounts for 2 bytes (GBK encoding). If you have 100 CKBs, you can probably save less than 50 Chinese characters to this cell.",
-          "p10": "In the case of <Dream of the Red Chamber>, this novel is about 780,000 words in total, so you will need approximately 1.56 million native CKB tokens to upload the entire chunk on-chain.",
+          "p4": "A box (cell) can also be subdivided into multiple boxes. Simply make sure that the boxes’ total space is equal to the quantity of tokens you hold.",
+          "p6": "In Nervos CKB, 1 CKB is equal to 1 byte of storage space.",
+          "p7": "For example, if you have 100 CKBs, you will have 100 bytes of on-chain space, so you can create a box with 100 bytes of space. You can divide that 100 bytes into as many boxes as you like.",
+          "p8": "The box can store data. The data size must be smaller than the space of the box, because the box includes other components which also occupy some space.",
+          "p9": "For instance, one Chinese character accounts for 2 bytes (GBK encoding). If you have 100 CKBs in a cell, you can probably save less than 50 Chinese characters in it.",
+          "p10": "In the case of Dream of the Red Chamber, this novel is approximately 780,000 words in total, so if you want to upload the whole chunk on-chain, you'll need approximately 1.56 million native CKB tokens.",
           "p11": "As you can see, on-chain storage is a precious asset.",
-          "p12": "CKB is designed to store on-chain consensus, so as to encourage everyone to upload data that is truly valuable and necessary to go through consensus. Such data is comparable to a common knowledge base owned by the entire human race.",
-          "p13": "This is how the CKB got its name (Common knowledge base).",
+          "p12": "CKB is built to store consensus data on-chain, thereby allowing everyone to upload data that is valuable and necessary for consensus. It is comparable to a common knowledge base owned by the entire human race.",
+          "p13": "This is how the CKB got its name (Common Knowledge Base).",
           "p14": "The entire cell data structure looks like this:",
-          "p15": "These four fields have the following meanings:",
+          "p15": "The four fields are defined as follows:",
           "ul1": {
             "l1": "capacity: the space size of the cell, i.e. the number of native tokens represented by this cell, usually expressed in hexadecimal.",
             "l2": "lock: a script, which is essentially the equivalent of a lock. We'll show you more details later.",
-            "l3": "type: a script, same as the lock but for a different purpose. More on this later.",
-            "l4": "data: an unformatted string where any type of data can be stored"
+            "l3": "type: a script, same as the lock but for a different purpose.",
+            "l4": "data: an unformatted string where any type of data can be stored."
           },
           "p16": "More detailed descriptions of data structures can be found here: ",
-          "p17": "The most important rule to keep in mind about the cell is that the sum of the total space occupied by the four fields above must be less than or equal to the capacity value.",
-          "p18": "In other words",
-          "p19": "To better understand, let's look at an example.",
-          "p20": "In this small experiment, type in something as the cell data to see the real-time changes in the length of the cell. Click on the cell to reveal the exact contents and the actual length occupied by each field.",
-          "p21": "We assume that the capacity of the cell is 0x1dcd65000, which is 80 bytes in size. If the change in data causes the actual capacity to grow beyond the value of capacity, the cell will be considered invalid."
+          "p17": "Note：A cell's total size for all four fields above must be less than or equal to the capacity of the cell.",
+          "p18": "As shown below",
+          "p19": "To better understand, let's look at the following example.",
+          "p20": "Type in something as the cell data to see the real-time changes in the length of the cell. Click on the cell to view the cell content and the actual length of each field.",
+          "p21": "The capacity of the cell is set as 0x1dcd65000, which is 80 bytes in size. If the change in data causes the actual occupancy to grow beyond the value of capacity, the cell will be considered invalid."
         },
         "howToKnowCellIsYours": {
           "title": "How to tell that you own a cell?",
